# kompajleri-domasna3

./: CMakeLists.txt  CMakeLists.txt.txt
include/: fibonacci.h  msg.h
src/: fibonacci.c  main.c  makefile.txt  msg.c
